# cortex

./: .gitignore  README.md  pyproject.toml
src/cortex/: app.py  main.py
src/cortex/core/: __init__.py  chunk.py  config.py  model_chat.py  model_loader.py  models.py  prompt.py
src/cortex/logger/: logger.py
src/cortex/services/: ingestion.py  retrieval.py  storage.py  test_ingestion.py
