[project]
name = "cortex"
version = "0.1.0-alpha"
description = "llm tools"
readme = "README.md"
authors = [{ name = "Lee", email = "bingyang136@163.com" }]
license = { text = "Apache License 2.0" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.124.1",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "ollama>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]
